--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <h1>Coffee Houses of Nashville</h1>
             <section class="shops">
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>The Jam</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -32,10 +34,11 @@
                         <p><strong><a href='https://www.google.com'>Menu</a></strong></p>
                     </div>
                 </article>
-
-                <article class="shop thewell"> 
-                    <div class="shop__combo"> 
-                        <img class="shop_img" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                <article class="shop   thewell">
+                    <div class="shop__image">
+                        <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>The Well</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -45,8 +48,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Red Bicycle</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -56,8 +61,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Crema</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -67,8 +74,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Frothy Monkey</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -78,8 +87,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>8th & Roast</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -89,8 +100,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Bongo Java</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -98,9 +111,12 @@
                         <p><strong><a href='https://www.google.com'>Menu</a></strong></p>
                     </div>
                 </article>
+
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Flatrock</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -110,8 +126,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Fido</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -121,8 +139,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Steadfast Coffee</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -132,8 +152,10 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
                         <h3 class='shop__name'>Dose Coffee</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
@@ -143,9 +165,11 @@
                 </article>
 
                 <article class="shop">
-                    <div class="shop__combo">
+                    <div class="shop__image">
                         <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
-                        <h3 class='shop__name'>Sam &amp Zoes</h3> 
+                    </div>
+                    <div class="shop__words">
+                        <h3 class='shop__name'>Sam & Zoes</h3> 
                         <p>123 Main St.</p>
                         <p class='shop__phone'>615-555-5555</p>
                         <p><strong><a href='https://www.google.com'>Website</a></strong></p>
@@ -154,21 +178,29 @@
                 </article>
 
                 <article class="shop">
-                    <img class="test1" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
-                    <h3 class='shop__name'>Slow Hand Coffee</h3>
-                    <p>123 Main St.</p>
-                    <p class='shop__phone'>615-555-5555</p>
-                    <p><strong><a href='https://www.google.com'>Website</a></strong></p>
-                    <p><strong><a href='https://www.google.com'>Menu</a></strong></p>
+                    <div class="shop__image">
+                        <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
+                        <h3 class='shop__name'>Slow Hand Coffee</h3> 
+                        <p>123 Main St.</p>
+                        <p class='shop__phone'>615-555-5555</p>
+                        <p><strong><a href='https://www.google.com'>Website</a></strong></p>
+                        <p><strong><a href='https://www.google.com'>Menu</a></strong></p>
+                    </div>
                 </article>
 
                 <article class="shop">
-                    <img class="test1" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
-                    <h3 class='shop__name'>The Horn</h3>
-                    <p>123 Main St.</p>
-                    <p class='shop__phone'>615-555-5555</p>
-                    <p><strong><a href='https://www.google.com'>Website</a></strong></p>
-                    <p><strong><a href='https://www.google.com'>Menu</a></strong></p>
+                    <div class="shop__image">
+                        <img class="test3" src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/flat-white-3402c4f.jpg?quality=90&resize=500,454" Alt="Foam in the shape of a flower on top of a cup of coffee in a black mug">
+                    </div>
+                    <div class="shop__words">
+                        <h3 class='shop__name'>The Horn</h3> 
+                        <p>123 Main St.</p>
+                        <p class='shop__phone'>615-555-5555</p>
+                        <p><strong><a href='https://www.google.com'>Website</a></strong></p>
+                        <p><strong><a href='https://www.google.com'>Menu</a></strong></p>
+                    </div>
                 </article>
             </section>
         </main>
