--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
         <link href="./styles/main.css" rel="stylesheet">
     </head>
     <body>
-        <header class="navbar">
-            <nav>
+        <header>
+            <nav class="navbar"> 
+                <img class="navbar__img" src="https://cdn.shopify.com/s/files/1/0005/8844/7804/products/2169_800x.jpg?v=1618601690" Alt="coffee logo">
                 <ul class="navbar__items">
-                    <img class="navbar__img" src="https://cdn.shopify.com/s/files/1/0005/8844/7804/products/2169_800x.jpg?v=1618601690" Alt="coffee logo">
                     <li class="navbar__item" id="one"><a href="#">Restaurants</a></li>
-                    |
                     <li class="navbar__item" id="two"><a href="#">Parks</a></li>
-                    |
                     <li class="navbar__item" id="three"><a href="#">Music venues</a></li>
                 </ul>
             </nav>
